# nextnpp

./: .editorconfig  README.md  pyproject.toml  requirements.txt
.claude/hooks/: README.md  session-start.sh
.claude/skills/frappe-app-build-profile/: SKILL.md
.claude/skills/frappe-app-shipping-gotchas/: SKILL.md
.claude/skills/frappe-portal-spa/: SKILL.md
.claude/skills/frappe-portal-spa/references/: cache-busting.md
.claude/skills/frappe-sales-analytics/: SKILL.md
.claude/skills/frappe-sales-analytics/references/: metrics-and-sql.md
.claude/skills/nextcode-build/: SKILL.md
.claude/skills/nextcode-build/references/: fixtures-install-pitfalls.md  prompt.md  validate_shipped_docs.py
.claude/skills/nextcode-debug/: SKILL.md
.claude/skills/nextcode-debug/references/: prompt.md  (+1 more)
.claude/skills/nextcode-design/: SKILL.md
.claude/skills/nextcode-kit/: SKILL.md
.claude/skills/nextcode-migrate/: SKILL.md
.claude/skills/nextcode-perf/: SKILL.md
.claude/skills/nextcode-qa/: SKILL.md
.claude/skills/nextcode-security/: SKILL.md
.claude/skills/nextcode-xray/: SKILL.md
npp/: hooks.py  modules.txt  patches.txt
npp/api/: _utils.py  analytics.py  dashboard.py  manager.py  orders.py  outstanding.py  payment_policy.py  promo.py  promo_admin.py  promotions.py
npp/fixtures/: custom_field.json
npp/npp_portal/: __init__.py
npp/patches/: block_desk_for_sales_staff.py  convert_sales_staff_to_website_user.py  grant_npp_sales_staff_perms.py
npp/public/npp/: shell.css  shell.js
npp/www/: npp.html  npp.py  staff-login.html
tests/: smoke.md
(+38 files in other folders)
