[project]
name = "npp"
authors = [{ name = "Hoang Giang JSC", email = "chien@1nguoi.com" }]
description = "B2B portal for distributors of Hoang Giang JSC"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "npp"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
